- Fixed styling for wizard to stretch navbar across first column

--- a/app/assets/stylesheets/wizard.less
+++ b/app/assets/stylesheets/wizard.less
@@ -12,6 +12,7 @@
   }
 }
 .wizard a {
+		width: 162px;
     padding: 12px 12px 10px 12px;
     margin-right: 5px;
     background:lighten(@color1, 10%);
@@ -45,6 +46,7 @@
 .wizard a:first-child:before { border: none }
 .wizard a:last-child:after { border: none }
 .wizard a:first-child {
+		width: 163px;
     -moz-border-radius: 4px 0 0 4px;
     -webkit-border-radius: 4px 0 0 4px;
     border-radius: 4px 0 0 4px;
@@ -53,6 +55,8 @@
     -moz-border-radius: 0 4px 4px 0;
     -webkit-border-radius: 0 4px 4px 0;
     border-radius: 0 4px 4px 0;
+		margin-right: 0px;
+		width: 163px;
 }
 .wizard .badge {
   background:@color1;
